@@ -19,7 +19,7 @@ else
     exit 1
 fi
 
-VERSION=1.4.1
+VERSION=3.3.1
 
 RELEASE=release
 BUILD=build
@@ -38,6 +38,4 @@ COPYRIGHT="Copyright 2016-$YEAR EvoMaster Team"
 VENDOR="EvoMaster Team"
 
 $JPACKAGE --main-jar $JAR --input $BUILD --dest $RELEASE --name evomaster \
-  --copyright "$COPYRIGHT" --license-file ./LICENSE --vendor "$VENDOR" --app-version $VERSION $OS \
-  --java-options "--add-opens java.base/java.net=ALL-UNNAMED"
-#Keep --add-opens in sync with Dockerfile
+  --copyright "$COPYRIGHT" --license-file ./LICENSE --vendor "$VENDOR" --app-version $VERSION $OS
